correction Manu